--- a/django/sitewomen/women/templates/women/index.html
+++ b/django/sitewomen/women/templates/women/index.html
@@ -1,9 +1,35 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Главная страница</title>
+    <title>{{title}}</title>
 </head>
 <body>
-<h1>Главная страница</h1>
+
+    {% block content %}
+    <section class="main-section">
+        {% include 'women/includes/nav.html' %}
+        <div class="main-content">
+            <h1>{{title}}</h1>
+            <ul>
+                {% for p in posts %}
+                {% if p.is_published == True %}
+                <li>
+                    <h2>{{ p.title }}</h2>
+                    <p>{{ p.content|truncatewords:50 }}</p>
+                    <p><a href="{% url 'post' p.id %}">Читать пост</a></p>
+                    {% if not forloop.last %}
+                    <hr>
+                    {% endif %}
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </div>    
+    </section>    
+    {% endblock %}
+    
+
 </body>
 </html>
